# telegram-expense-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
bot-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
bot-service/app/: asgi.py  main.py
bot-service/app/application/: basic_expense_parser.py  command_handler.py  process_message.py
bot-service/app/core/: config.py
bot-service/app/domain/: categories.py  expense.py
bot-service/app/infrastructure/llm/: gemini_image_extractor.py  langchain_expense_extractor.py
bot-service/app/infrastructure/postgres/: connection.py  expense_query_repository.py  expense_repository.py  schema.py  users_repository.py  whitelist_repository.py
bot-service/app/interface/http/: schemas.py
bot-service/tests/: conftest.py  test_basic_expense_parser.py  test_command_handler.py  test_expense_repository.py  test_gemini_image_extractor.py  test_langchain_expense_extractor.py  test_process_message_api.py  test_schema.py  test_users_repository.py  test_whitelist_repository.py
connector-service/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
connector-service/src/: app.js  app.ts  logger.ts  server.js  server.ts
connector-service/tests/: health.test.js  health.test.ts  processTelegramUpdate.test.js  processTelegramUpdate.test.ts  telegramWebhookHandler.test.js  telegramWebhookHandler.test.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  architecture-step1.md
infra/postgres/: .env.example  docker-compose.yml
(+14 files in other folders)
